HTTP_Routing/2.1_HTTProute/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /login

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tea-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - tea.f5bnk.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - type: Exact
              name: env
              value: canary

      backendRefs:
        - name: httpbin-pool
          kind: Pool
          group: k8s.f5net.com

    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com
